--- a/alacritty.yml
+++ b/alacritty.yml
@@ -20,7 +20,7 @@
   # available, otherwise `xterm-256color` is used.
   #TERM: alacritty
 
-#window:
+window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -42,9 +42,9 @@
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-  #  x: 0
-  #  y: 0
+  padding:
+    x: 1
+    y: 15
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -171,28 +171,16 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 # Colors (Challenger Deep)
+
 colors:
   # Default colors
   primary:
-    background: '0x1e1c31'
-    foreground: '0xcbe1e7'
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0xff271d'
-    cursor: '0xfbfcfc'
+    background: '0x1b182c'
+    foreground: '0xcbe3e7'
+
   # Normal colors
   normal:
-    black:   '0x141228'
-    red:     '0xff5458'
-    green:   '0x62d196'
-    yellow:  '0xffb378'
-    blue:    '0x65b2ff'
-    magenta: '0x906cff'
-    cyan:    '0x63f2f1'
-    white:   '0xa6b3cc'
-  # Bright colors
-  bright:
-    black:   '0x565575'
+    black:   '0x100e23'
     red:     '0xff8080'
     green:   '0x95ffa4'
     yellow:  '0xffe9aa'
@@ -201,6 +189,16 @@ colors:
     cyan:    '0xaaffe4'
     white:   '0xcbe3e7'
 
+  # Bright colors
+  bright:
+    black:   '0x565575'
+    red:     '0xff5458'
+    green:   '0x62d196'
+    yellow:  '0xffb378'
+    blue:    '0x65b2ff'
+    magenta: '0x906cff'
+    cyan:    '0x63f2f1'
+    white:   '0xa6b3cc'
   # Cursor colors
   #
   # Colors which should be used to draw the terminal cursor.
